jitfailure-dolfin_expression_b193be721d8fdb02e2d3aa6deb6c6734/error.log
/tmp/tmpdumgxwuk/dolfin_expression_b193be721d8fdb02e2d3aa6deb6c6734.cpp: In member function ‘virtual void dolfin::dolfin_expression_b193be721d8fdb02e2d3aa6deb6c6734::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpdumgxwuk/dolfin_expression_b193be721d8fdb02e2d3aa6deb6c6734.cpp:61:37: error: ‘t’ was not declared in this scope
           values[0] = 5*(1-x[1])*(1-t);
                                     ^
/tmp/tmpdumgxwuk/dolfin_expression_b193be721d8fdb02e2d3aa6deb6c6734.cpp:61:37: note: suggested alternative: ‘tm’
           values[0] = 5*(1-x[1])*(1-t);
                                     ^
                                     tm
